# Aether

./: .gitignore  PROJECT_DESIGN.md  README.md
backend/: .env.example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 49c9540f91c7_events_analysis_jsonb.py  58181bb7a229_initial_regions.py  a520060dd1d5_data_pipeline_tables.py
backend/scripts/: seed_assets.py  seed_economic_regions.py
backend/src/aether/: __init__.py  cli.py  config.py  main.py
backend/src/aether/api/: __init__.py  routers.py  schemas.py
backend/src/aether/ingestion/: __init__.py  akshare_.py  akshare_news.py  alpaca.py  binance.py  common.py  jin10.py  rss.py  scheduler.py
backend/src/aether/models/: __init__.py  assets.py  base.py  events.py  news.py  prices.py  regions.py
backend/src/aether/pipeline/: __init__.py  impact.py  llm.py  processor.py  watcher.py
backend/src/aether/rules/: __init__.py  loader.py  matcher.py  schema.py
backend/src/aether/rules_data/: boe_rate_cut.yaml  boe_rate_hike.yaml  boe_rate_hold.yaml  boj_rate_cut.yaml  boj_rate_hike.yaml  boj_ycc_change.yaml  china_cpi_release.yaml  china_lpr_cut.yaml  ecb_rate_cut.yaml  ecb_rate_hike.yaml  ecb_rate_hold.yaml  fed_chair_dovish.yaml  (+8 more)
backend/tests/: conftest.py  test_akshare_ingestion.py  test_akshare_news.py  test_alpaca_ingestion.py  test_api.py  test_assets_seed.py  test_binance_ingestion.py  test_economic_regions.py  test_jin10_ingestion.py  test_llm.py  test_pipeline.py  test_redis.py  test_rss_ingestion.py  test_rules_engine.py  test_stats.py  test_watcher.py  test_ws_hub.py
(+51 files in other folders)
